Wraps the fuel economy block output in a <div> so we can add CSS to prevent the next block on the page from overlapping with this block. Changes hard-coded meta prefixes to use the JavaScript variable instead.

--- a/src/fuel-economy/style.scss
+++ b/src/fuel-economy/style.scss
@@ -1,3 +1,8 @@
+.fuel-economy-wrapper:after {
+	content: "";
+	display: table;
+	clear: both;
+}
 .fuel-name{
 	clear: left;
 	padding: .2em 0;
